Dodanie bazy danych i wczytywania dokumentów.