@@ -14,11 +14,21 @@ repositories {
 dependencies {
     testImplementation(platform("org.junit:junit-bom:5.10.0"))
     testImplementation("org.junit.jupiter:junit-jupiter")
+    implementation("org.xerial:sqlite-jdbc:3.46.0.0")
+    implementation("org.flywaydb:flyway-core:10.16.0")
+    implementation("ch.qos.logback:logback-classic:1.5.6")
+
+
 }
 
 application {
     mainClass.set("org.example.Main")
+    applicationDefaultJvmArgs = listOf(
+        "--enable-native-access=javafx.graphics",
+        "--enable-native-access=ALL-UNNAMED"
+    )
 }
+
 
 javafx {
     version = "24.0.2"
